[package]
name = "ray-tracing-rust"
version = "0.1.0"
authors = ["Osamu Koga <osak.63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"

[[bin]]
name = "ray-tracing-rust"
path = "main.rs"
